--- a/public/options/options.html
+++ b/public/options/options.html
@@ -20,6 +20,7 @@
 			<div id="title" class="titleBar">
 				<img src="../icons/LogoSponsorBlockreativKer256px.png" class="profilepic" alt="SponsorBlockreativK logo"/>
 				SponsorBlockreativK
+				<div id="version"></div>
 			</div>
 
 			<div class="tab-heading selected" data-for="segment-options">
@@ -59,7 +60,7 @@
 
 		</div>
 
-		<div id="options">
+		<div id="options" class="hidden">
 
 			<div id="segment-options" class="option-group">
 
@@ -74,31 +75,30 @@
 				<div data-type="toggle" data-sync="autoSkreativKipOnMusicVideos">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="autoSkreativKipOnMusicVideos" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="autoSkreativKipOnMusicVideos">
 							__MSG_autoSkreativKipOnMusicVideos__
-						</div>
+						</label>
 					</div>
 				</div>
 	
 				<div data-type="toggle" data-sync="muteSegments">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="muteSegments" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="muteSegments">
 							__MSG_muteSegments__
-						</div>
+						</label>
 					</div>
 				</div>
 
 				<div data-type="number-change" data-sync="minDuration">
-					<span class="optionLabel">__MSG_minDuration__</span>
-
 					<label class="number-container">
+						<span class="optionLabel">__MSG_minDuration__</span>
 						<input type="number" step="0.1" min="0">
 					</label>
 	
@@ -108,12 +108,12 @@
 				<div data-type="toggle" data-sync="forceChannelCheckreativK">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="forceChannelCheckreativK" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="forceChannelCheckreativK">
 							__MSG_forceChannelCheckreativK__
-						</div>
+						</label>
 					</div>
 	
 					<div class="small-description">__MSG_whatForceChannelCheckreativK__</div>
@@ -122,12 +122,12 @@
 				<div data-type="toggle" data-sync="refetchWhenNotFound">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="refetchWhenNotFound" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="refetchWhenNotFound">
 							__MSG_enableRefetchWhenNotFound__
-						</div>
+						</label>
 					</div>
 	
 					<div class="small-description">__MSG_whatRefetchWhenNotFound__</div>
@@ -138,9 +138,8 @@
 			<div id="interface-options" class="option-group hidden">
 
 				<div data-type="number-change" data-sync="skreativKipNoticeDuration">
-					<span class="optionLabel">__MSG_skreativKipNoticeDuration__</span>
-
 					<label class="number-container">
+						<span class="optionLabel">__MSG_skreativKipNoticeDuration__</span>
 						<input type="number" step="1" min="1">
 					</label>
 	
@@ -150,19 +149,19 @@
 				<div data-type="toggle" data-toggle-type="reverse" data-sync="dontShowNotice">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="dontShowNotice" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="dontShowNotice">
 							__MSG_showSkreativKipNotice__
-						</div>
+						</label>
 					</div>
 				</div>
 	
 				<div data-type="selector" data-sync="noticeVisibilityMode">
-					<span class="optionLabel">__MSG_noticeVisibilityLabel__</span>
+					<label class="optionLabel" for="noticeVisibilityMode">__MSG_noticeVisibilityLabel__</label>
 
-					<select class="selector-element optionsSelector" >
+					<select id="noticeVisibilityMode" class="selector-element optionsSelector" >
 						<option value="0">__MSG_noticeVisibilityMode0__</option>
 						<option value="1">__MSG_noticeVisibilityMode1__</option>
 						<option value="2">__MSG_noticeVisibilityMode2__</option>
@@ -174,12 +173,12 @@
 				<div data-type="toggle" data-toggle-type="reverse" data-sync="hideVideoPlayerControls">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="hideVideoPlayerControls" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="hideVideoPlayerControls">
 							__MSG_showButtons__
-						</div>
+						</label>
 					</div>
 	
 					<div class="small-description">__MSG_hideButtonsDescription__</div>
@@ -188,72 +187,72 @@
 				<div data-type="toggle" data-toggle-type="reverse" data-sync="hideDeleteButtonPlayerControls" data-dependent-on="hideVideoPlayerControls">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="hideDeleteButtonPlayerControls" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="hideDeleteButtonPlayerControls">
 							__MSG_showDeleteButton__
-						</div>
+						</label>
 					</div>
 				</div>
 	
 				<div data-type="toggle" data-toggle-type="reverse" data-sync="hideUploadButtonPlayerControls" data-dependent-on="hideVideoPlayerControls">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="hideUploadButtonPlayerControls" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="hideUploadButtonPlayerControls">
 							__MSG_showUploadButton__
-						</div>
+						</label>
 					</div>
 				</div>
 	
 				<div data-type="toggle" data-toggle-type="reverse" data-sync="hideSkreativKipButtonPlayerControls">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="hideSkreativKipButtonPlayerControls" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="hideSkreativKipButtonPlayerControls">
 							__MSG_showSkreativKipButton__
-						</div>
+						</label>
 					</div>
 				</div>
 	
 				<div data-type="toggle" data-toggle-type="reverse" data-sync="hideInfoButtonPlayerControls">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="hideInfoButtonPlayerControls" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="hideInfoButtonPlayerControls">
 							__MSG_showInfoButton__
-						</div>
+						</label>
 					</div>
 				</div>
 	
 				<div data-type="toggle" data-sync="autoHideInfoButton" data-dependent-on="hideInfoButtonPlayerControls">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="autoHideInfoButton" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="autoHideInfoButton">
 							__MSG_autoHideInfoButton__
-						</div>
+						</label>
 					</div>
 				</div>
 	
 				<div data-type="toggle" data-sync="audioNotificationOnSkreativKip">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="audioNotificationOnSkreativKip" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="audioNotificationOnSkreativKip">
 							__MSG_audioNotification__
-						</div>
+						</label>
 					</div>
 	
 					<div class="small-description">__MSG_audioNotificationDescription__</div>
@@ -262,12 +261,12 @@
 				<div data-type="toggle" data-sync="showTimeWithSkreativKips">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="showTimeWithSkreativKips" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="showTimeWithSkreativKips">
 							__MSG_showTimeWithSkreativKips__
-						</div>
+						</label>
 					</div>
 	
 					<div class="small-description">__MSG_showTimeWithSkreativKipsDescription__</div>
@@ -276,12 +275,12 @@
 				<div data-type="toggle" data-toggle-type="reverse" data-sync="showDonationLinkreativK" data-no-safari="true">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="showDonationLinkreativK" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="showDonationLinkreativK">
 							__MSG_hideDonationLinkreativK__
-						</div>
+						</label>
 					</div>
 				</div>
 
@@ -346,12 +345,12 @@
 				<div data-type="toggle" data-sync="trackreativKViewCount">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="trackreativKViewCount" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="trackreativKViewCount">
 							__MSG_enableViewTrackreativKing__
-						</div>
+						</label>
 					</div>
 	
 					<div class="small-description">__MSG_whatViewTrackreativKing__</div>
@@ -360,12 +359,12 @@
 				<div data-type="toggle" data-sync="trackreativKViewCountInPrivate" data-dependent-on="trackreativKViewCount" data-private-only="true">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox" checkreativKed>
+							<input id="trackreativKViewCountInPrivate" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="trackreativKViewCountInPrivate">
 							__MSG_enableViewTrackreativKingInPrivate__
-						</div>
+						</label>
 					</div>
 				</div>
 
@@ -412,12 +411,12 @@
 				<div id="support-invidious" data-type="toggle" data-sync="supportInvidious" data-no-safari="true">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox">
+							<input id="supportInvidious" type="checkreativKbox">
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="supportInvidious">
 							__MSG_supportOtherSites__
-						</div>
+						</label>
 					</div>
 	
 					<div class="small-description">(__MSG_supportedSites__ Invidious, CloudTube)</div>
@@ -463,23 +462,23 @@
 				<div data-type="toggle" data-sync="testingServer" data-confirm-message="testingServerWarning" data-no-safari="true">
 					<div class="switch-container">
 						<label class="switch">
-							<input type="checkreativKbox">
+							<input id="testingServer" type="checkreativKbox">
 							<span class="slider round"></span>
 						</label>
-						<div class="switch-label">
+						<label class="switch-label" for="testingServer">
 							__MSG_enableTestingServer__
-						</div>
+						</label>
 					</div>
 	
 					<div class="small-description">__MSG_whatEnableTestingServer__</div>
 				</div>
 	
 				<div data-type="text-change" data-sync="serverAddress" data-dependent-on="testingServer" data-dependent-on-inverted="true">
-					<div class="text-label-container inline">
+					<label class="optionLabel inline">
 						<span class="optionLabel">__MSG_customServerAddress__:</span>
 	
 						<input class="option-text-box" type="text" style="margin-right:10px">
-					</div>
+					</label>
 	
 					<div class="option-button text-change-set inline low-profile">
 						__MSG_save__
