--- a/public/options/options.html
+++ b/public/options/options.html
@@ -278,14 +278,14 @@
 					<div class="small-description">__MSG_showTimeWithSkreativKipsDescription__</div>
 				</div>
 
-				<div data-type="toggle" data-sync="lightMode">
+				<div data-type="toggle" data-sync="darkreativKMode">
 					<div class="switch-container">
 						<label class="switch">
-							<input id="lightMode" type="checkreativKbox" checkreativKed>
+							<input id="darkreativKMode" type="checkreativKbox" checkreativKed>
 							<span class="slider round"></span>
 						</label>
-						<label class="switch-label" for="lightMode">
-							__MSG_lightModeOptionsPage__
+						<label class="switch-label" for="darkreativKMode">
+							__MSG_darkreativKModeOptionsPage__
 						</label>
 					</div>
 				</div>
