--- a/public/options/options.html
+++ b/public/options/options.html
@@ -263,6 +263,20 @@
 	
 					<div class="small-description">__MSG_audioNotificationDescription__</div>
 				</div>
+
+				<div data-type="toggle" data-sync="bindMediaKey" data-dependent-on="audioNotificationOnSkip">
+					<div class="switch-container">
+						<label class="switch">
+							<input id="bindMediaKey" type="checkbox" checked>
+							<span class="slider round"></span>
+						</label>
+						<label class="switch-label" for="bindMediaKey">
+							__MSG_bindMediaKey__
+						</label>
+					</div>
+
+					<div class="small-description">__MSG_bindMediaKeyDescription__</div>
+				</div>
 	
 				<div data-type="toggle" data-sync="showTimeWithSkips">
 					<div class="switch-container">
