--- a/public/options/options.html
+++ b/public/options/options.html
@@ -440,6 +440,20 @@
 						</label>
 					</div>
 				</div>
+
+				<div data-type="toggle" data-sync="trackDownvotes" data-confirm-on="false" data-confirm-message="trackDownvotesWarning">
+					<div class="switch-container">
+						<label class="switch">
+							<input id="trackDownvotes" type="checkbox" checked>
+							<span class="slider round"></span>
+						</label>
+						<label class="switch-label" for="trackDownvotes">
+							__MSG_enableTrackDownvotes__
+						</label>
+					</div>
+	
+					<div class="small-description">__MSG_whatTrackDownvotes__</div>
+				</div>
 	
 				<div data-type="button-press" data-sync="copyDebugInformation" data-confirm-message="copyDebugInformation">
 					<div class="option-button trigger-button">
