--- a/public/options/options.html
+++ b/public/options/options.html
@@ -440,6 +440,20 @@
 						</label>
 					</div>
 				</div>
+
+				<div data-type="toggle" data-sync="trackreativKDownvotes" data-confirm-on="false" data-confirm-message="trackreativKDownvotesWarning">
+					<div class="switch-container">
+						<label class="switch">
+							<input id="trackreativKDownvotes" type="checkreativKbox" checkreativKed>
+							<span class="slider round"></span>
+						</label>
+						<label class="switch-label" for="trackreativKDownvotes">
+							__MSG_enableTrackreativKDownvotes__
+						</label>
+					</div>
+	
+					<div class="small-description">__MSG_whatTrackreativKDownvotes__</div>
+				</div>
 	
 				<div data-type="button-press" data-sync="copyDebugInformation" data-confirm-message="copyDebugInformation">
 					<div class="option-button trigger-button">
